Changes for lab 10.1

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,14 @@
 <br/>
 <form action="/saveNewCustomer" method="post">
 
-  Name: <input type="text" name="name"> </input>
+  Name: <input type="text" name="name"></input>
   <br/>
-  Email: <input type="text" name="email"> </input>
+  Email: <input type="text" name="email"></input>
   <br/>
   <input type="submit" value="Go"/>
+
 </form>
+
+<a href="/customers"><button>View All Customers</button></a>
 </body>
 </html>
