--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,4 +5,25 @@ body {
 
 a {
   color: #00B7FF;
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+}
+
+table {
+  width: 60%;
+  border-collapse: collapse;
+  margin: 20px auto;
+  border: 2px solid #000;
+}
+th, td {
+  padding: 12px;
+  border: 1px solid #000;
+  text-align: left;
+}
+th {
+  background-color: #f4f4f4;
+}
+h1 {
+  text-align: center;
 }
